--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/oqzulz329/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/oqzulz329/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/oqzulz329/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/oqzulz329/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/sjgjny386/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/sjgjny386/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/sjgjny386/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/sjgjny386/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/sjgjny386/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/sjgjny386/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【最新疫情10.19】美加边境关闭延至11月</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1RW499-1-600x400.jpg" />
 <h6>美加边境关闭已被延长至11月21日。图为美国海关人员在与人交谈，上面的标志写着美国加拿大边境已于2020年3月22日关闭。（Photo by Lars Hagberg / AFP）
 </h6>
 <hr>
-	<p>【大纪元2020年10月19日讯】（大纪元记者夏雨、戴芙若、颜殊璟、林燕综合报导）10月19日全球<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）疫情最新情况：</p>
-<p>中共肺炎全球疫情及美国疫情大数据请点击<ahref="https://github.com/oqzulz329/djy/blob/master/gb/nf1368917.md#1" target="_blank" rel="noopener noreferrer">这里</a>。</p>
+	<p>【大纪元2020年10月19日讯】（大纪元记者夏雨、戴芙若、颜殊璟、林燕综合报导）10月19日全球<ahref="https://github.com/sjgjny386/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/sjgjny386/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）疫情最新情况：</p>
+<p>中共肺炎全球疫情及美国疫情大数据请点击<ahref="https://github.com/sjgjny386/djy/blob/master/gb/nf1368917.md#1" target="_blank" rel="noopener noreferrer">这里</a>。</p>
 <h2>要点：</h2>
 <p><strong><ahref="#_Toc2020101918">爱尔兰再度全国封锁 欧盟首个</a></strong><br />
 <strong><ahref="#_Toc2020101917">墨西哥内阁多人染疫 总统周二接受测试</a></strong><br />
@@ -17,14 +17,14 @@
 <strong><ahref="#_Toc2020101914">美加边境关闭延长至11月21日</a></strong><br />
 <strong><ahref="#_Toc2020101913">全球病例突破4000万大关</a></strong><br />
 <strong><ahref="#_Toc2020101912">TSA单日筛查人数首破百万</a></strong></p>
-<p>根据约翰?霍普金斯大学（Johns Hopkins University）的数据，截至北京时间10月18日下午1时，全球确诊感染<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）的人数已突破4,000万，死亡人数超过111万（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
+<p>根据约翰?霍普金斯大学（Johns Hopkins University）的数据，截至北京时间10月18日下午1时，全球确诊感染<ahref="https://github.com/sjgjny386/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/sjgjny386/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）的人数已突破4,000万，死亡人数超过111万（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
 <p>美国确诊病例超过808万例，死亡超过21.8万人。美东时间周日（10月18日）中午12点21分，美国疾控中心（CDC）数据显示，全美在过去24小时新增53,157病例，死亡593人。每10万人感染人数最多的州是北达科他州、南达科他州、蒙大拿州和威斯康星州。</p>
 <p>欧洲疫情爆发，新病例增长幅度已经超过美国。周日意大利新增病例达11,705，创下纪录，重症室人数也是10天前的2倍。国际货币基金组织表示，全面封锁的可能性不大。</p>
 <p>这个周末，欧洲多地爆发抵制戴口罩等防疫措施的大规模抗议活动，且在一些地方爆发警民暴力冲突。</p>
 <p>全美经济正在从疫情打击中复苏，南部各州因重启经济时间早，以及居民对病毒的恐惧小，经济和就业恢复速度更快。</p>
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
-<h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h2>以下是<ahref="https://github.com/sjgjny386/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
 <p><a name="_Toc2020101918"></a></p>
 <h3>爱尔兰再度全国封锁 欧盟首个</h3>
 <figure id="attachment_12487488" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229172329.jpg"><img class="size-large wp-image-12487488" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229172329-600x396.jpg" alt="" width="600" b="396" /></a><figcaption class="wp-caption-text">爱尔兰总理米歇尔·马丁（Micheal Martin）于2020年10月19日在都柏林的政府大楼对全国发表电视讲话。马丁说，爱尔兰是第一个再次进行全国封锁的欧盟国家，发布了“居家令”等限制措施，但要求学校保持开放。 （JULIEN BEHAL/POOL/AFP via Getty Images）</figcaption></figure>
@@ -163,7 +163,7 @@
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
 葡萄牙卫生部门还报告，过去24小时内新增17人死亡。至今已有2,198人染疫身亡。</p>
 <h3>美21州新病例数稳定 27个州上升 两州下降</h3>
-<p>美国<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>数据显示，有21个州新增病例数呈稳定趋势，两个州呈下降趋势，27个州呈上升趋势。</p>
+<p>美国<ahref="https://github.com/sjgjny386/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>数据显示，有21个州新增病例数呈稳定趋势，两个州呈下降趋势，27个州呈上升趋势。</p>
 <p>约翰·霍普金斯大学（Johns Hopkins University）的数据显示，截至周一（19日）早晨，美国确诊病例总数已超过800万，死亡人数超过21.9万。</p>
 <p>与前一周相比，有两个州新增病例数呈下降趋势。这两个州是夏威夷和佛蒙特州。</p>
 <p>有27个州新增病例数呈上升趋势，21个州呈稳定趋势。</p>
@@ -188,7 +188,7 @@
 <h3>英国议会女议员染疫住院</h3>
 <p>英国议会工党女议员亚斯敏·库雷希（Yasmin Qureshi），因感染了中共病毒而住进医院。</p>
 <blockquote class="twitter-tweet">
-<p dir="ltr" lang="en">EXCLUSIVE: Manchester MP Yasmin Qureshi Hospitalised With Covid <ahref="https://t.co/sC8QbIXifN">https://t.co/sC8QbIXifN</a> <ahref="https://t.co/9zWqMsHWD4"></a><img width="600" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="9zWqMsHWD4</a></p>
+<p dir="ltr" lang="en">EXCLUSIVE: Manchester MP Yasmin Qureshi Hospitalised With Covid <ahref="https://t.co/sC8QbIXifN">https://t.co/sC8QbIXifN</a> <ahref="https://t.co/9zWqMsHWD4"></a><img width="600" src="https://raw.githubusercontent.com/sjgjny386/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/sjgjny386/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="9zWqMsHWD4</a></p>
 <p>— Guido Fawkes (@GuidoFawkes) <ahref="https://twitter.com/GuidoFawkes/status/1318123551539531777?ref_src=twsrc%5Etfw">October 19, 2020</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
 库雷希周一（19日）在社交媒体上发布声明说，她两周前就开始感到自己病了，随后被确诊感染了中共病毒。上周六病情恶化后，她因肺炎住进医院。</p>
@@ -211,7 +211,7 @@
 <p>波兰政府周一（19日）表示，该国将在华沙国家体育场开设一家临时医院，以缓解病例激增给医疗系统造成的压力。这是该国第一座治疗中共病毒患者的战地医院。</p>
 <p>这座医院将设在华沙国家体育场的会议室内，初期可容纳500名染疫患者。 据政府说，可能会扩充到最多容纳1000张病床。</p>
 <blockquote class="twitter-tweet">
-<p dir="ltr" lang="en">Poland to convert stadium into its first coronavirus field hospital<ahref="https://twitter.com/hashtag/218newsenglish?src=hash&amp;ref_src=twsrc%5Etfw">#218newsenglish</a> <ahref="https://twitter.com/hashtag/coronavirus?src=hash&amp;ref_src=twsrc%5Etfw">#coronavirus</a> <ahref="https://twitter.com/hashtag/Poland?src=hash&amp;ref_src=twsrc%5Etfw">#Poland</a> <ahref="https://twitter.com/hashtag/Libya?src=hash&amp;ref_src=twsrc%5Etfw">#Libya</a> <ahref="https://t.co/QWjYSgBxTV"></a><img width="600" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="QWjYSgBxTV</a></p>
+<p dir="ltr" lang="en">Poland to convert stadium into its first coronavirus field hospital<ahref="https://twitter.com/hashtag/218newsenglish?src=hash&amp;ref_src=twsrc%5Etfw">#218newsenglish</a> <ahref="https://twitter.com/hashtag/coronavirus?src=hash&amp;ref_src=twsrc%5Etfw">#coronavirus</a> <ahref="https://twitter.com/hashtag/Poland?src=hash&amp;ref_src=twsrc%5Etfw">#Poland</a> <ahref="https://twitter.com/hashtag/Libya?src=hash&amp;ref_src=twsrc%5Etfw">#Libya</a> <ahref="https://t.co/QWjYSgBxTV"></a><img width="600" src="https://raw.githubusercontent.com/sjgjny386/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/sjgjny386/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="QWjYSgBxTV</a></p>
 <p>— 218newsenglish (@218newsenglish) <ahref="https://twitter.com/218newsenglish/status/1318151597264953347?ref_src=twsrc%5Etfw">October 19, 2020</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
 波兰上周五（16日）报告新增132人死亡，创下自大流行开始以来单日最高纪录。</p>
@@ -222,7 +222,7 @@
 <h3>比利时实行宵禁 瑞士强制戴口罩</h3>
 <p>比利时从周一（19日）开始实行全国性夜间宵禁。瑞士已规定在室内公共场所必须戴口罩。这些是欧洲国家为遏制猛烈的第二波疫情而采取的最新措施。</p>
 <blockquote class="twitter-tweet">
-<p dir="ltr" lang="en">Belgium imposes a nationwide overnight curfew as Switzerland makes wearing face masks compulsory in indoor public spaces, the latest desperate measures by European governments to fight a powerful second coronavirus wave <ahref="https://t.co/W8jH35auaT">https://t.co/W8jH35auaT</a> <ahref="https://t.co/uqKKECf7eU"></a><img width="600" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="uqKKECf7eU</a></p>
+<p dir="ltr" lang="en">Belgium imposes a nationwide overnight curfew as Switzerland makes wearing face masks compulsory in indoor public spaces, the latest desperate measures by European governments to fight a powerful second coronavirus wave <ahref="https://t.co/W8jH35auaT">https://t.co/W8jH35auaT</a> <ahref="https://t.co/uqKKECf7eU"></a><img width="600" src="https://raw.githubusercontent.com/sjgjny386/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/sjgjny386/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="uqKKECf7eU</a></p>
 <p>— AFP news agency (@AFP) <ahref="https://twitter.com/AFP/status/1318084466120687617?ref_src=twsrc%5Etfw">October 19, 2020</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
 欧洲已有超过25万人丧生。那里日益加剧的危机与澳洲形成了对比。澳洲第二大城市已开始放宽封锁。这种封锁曾使数以百万计的人基本上被限制在家中数月之久。</p>
@@ -360,23 +360,23 @@
 <p>在疫情爆发后不得不取消航行后，邮轮公司还得为客户预订旅行提供激励措施。例如，Royal Caribbean公司为客户预订的邮轮提供125%的未来信用额度。邮轮评论网站Cruise Critic的一项持续调查发现，截至7月1日，大多数邮轮公司提供的信用额度至少和Royal Caribbean提供的类似，有的还增加一些附加功能，例如将来的船上信用额度。</p>
 <p>邮轮公司给消费者的信息是：我们基本上准备为你们承担即刻预订船票的风险。</p>
 <figure id="attachment_11828037" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/02/847d21de-dfbe-4b4f-88bb-cff27437c30b-fotolia_233909815_subaion_monthly_m.jpg"><img class="size-large wp-image-11828037" src="https://i.epochtimes.com/assets/uploads/2020/02/847d21de-dfbe-4b4f-88bb-cff27437c30b-fotolia_233909815_subaion_monthly_m-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">邮轮停靠不同港口时，上岸走一走看一看当地风情，品尝一下当地美食，也是坐邮轮的趣味之一。(Fotolia)</figcaption></figure>
-<p>【最新疫情10.18】请点击<ahref=><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/11/n12468511.md#1">这里</a>。</p>
+<p>【最新疫情10.18】请点击<ahref=><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/11/n12468511.md#1">这里</a>。</p>
 <p>责任编辑：叶紫微#</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/9/n12465220.md#1">【最新疫情10.12】医生：川普检测呈阴性</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/13/n12471521.md#1">【最新疫情10.13】足球巨星C罗染疫</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/13/n12473675.md#1">【最新疫情10.14】川普儿子巴伦曾测试阳性</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/15/n12476829.md#1">【最新疫情10.15】川普：不想和习近平对话</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/9/n12465220.md#1">【最新疫情10.12】医生：川普检测呈阴性</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/13/n12471521.md#1">【最新疫情10.13】足球巨星C罗染疫</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/13/n12473675.md#1">【最新疫情10.14】川普儿子巴伦曾测试阳性</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/15/n12476829.md#1">【最新疫情10.15】川普：不想和习近平对话</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/18/n10405751.md#1" target="_blank">林辉：燕京大学校长相信中共后的结局</a></li><li><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/9/n7982398.md#1" target="_blank">大陆教师：婆婆神奇经历改变我的世界观</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/27/n10343446.md#1" target="_blank">刘白：晚清张謇的幻想</a></li><li><a href="https://github.com/sjgjny386/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/16/n11387274.md#1" target="_blank">7-20反迫害 美参众议员致信声援法轮功(1)</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
@@ -403,6 +403,6 @@
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483851.md#1">意大利小镇仅住2人 但坚持戴口罩保持距离</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/17/n12482137.htm">【最新疫情10.19】美加边境关闭延至11月</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/sjgjny386/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/sjgjny386/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/17/n12482137.htm">【最新疫情10.19】美加边境关闭延至11月</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482137.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/sjgjny386/djy/blob/master/gb/20/10/17/n12482137.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/sjgjny386/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/sjgjny386/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/sjgjny386/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sjgjny386/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
